	Updated print/xpdf to 3.00pl3nb1 [salo 2005-08-12]
        Updated databases/mysql-client to 4.0.25 [xtraeme 2005-08-12]
        Updated databases/mysql-server to 4.0.25 [xtraeme 2005-08-12]
	Updated editors/yudit to 2.7.8 [adam 2005-08-12]
	Updated emulators/wine to 20050725nb1 [salo 2005-08-12]
	Updated x11/gnome2-control-center to 2.10.1nb1 [jmmv 2005-08-12]
	Updated chat/gaim to 1.5.0 [reed 2005-08-12]
	Updated security/gpgme to 1.0.3 [drochner 2005-08-12]
	Updated security/seahorse to 0.7.9 [drochner 2005-08-12]
	Updated graphics/pstoedit to 3.41 [drochner 2005-08-12]
	Added print/ghostscript-afpl version 8.51 [drochner 2005-08-12]
	Updated net/dante to 1.1.17 [drochner 2005-08-12]
	Updated mail/imap-uw to 2004e [tv 2005-08-12]
	Updated editors/pico to 4.10 [tv 2005-08-12]
	Updated mail/pine to 4.63 [tv 2005-08-12]
	Updated devel/boost-build to 1.33.0 [jmmv 2005-08-12]
	Updated devel/boost-headers to 1.33.0 [jmmv 2005-08-12]
	Updated devel/boost-libs to 1.33.0 [jmmv 2005-08-12]
	Updated devel/boost-python to 1.33.0 [jmmv 2005-08-12]
	Updated devel/boost-docs to 1.33.0 [jmmv 2005-08-12]
	Updated meta-pkgs/boost to 1.33.0 [jmmv 2005-08-12]
	Updated devel/monotone to 0.22nb1 [jmmv 2005-08-12]
	Updated net/libpcap to 0.9.3nb2 [adrianp 2005-08-13]
	Added devel/p5-Class-Gomor-Hash version 0.22 [adrianp 2005-08-13]
	Added net/p5-Net-IPv4Addr version 0.10 [adrianp 2005-08-13]
	Added math/p5-Math-Base85 version 0.2 [adrianp 2005-08-13]
	Added net/p5-Net-IPv6Addr version 0.2 [adrianp 2005-08-13]
	Added net/p5-Net-Packet version 2.04 [adrianp 2005-08-13]
	Updated devel/monotone-server to 0.22nb1 [jmmv 2005-08-13]
	Updated textproc/docbook-xsl to 1.69.1 [jmmv 2005-08-13]
	Added net/snort-rules version 2.3 [adrianp 2005-08-13]
	Updated net/snort to 2.4.0 [adrianp 2005-08-13]
	Updated textproc/xmlto to 0.0.18nb1 [adrianp 2005-08-13]
	Updated sysutils/mklivecd to 0.13.1 [xtraeme 2005-08-13]
	Updated ham/grig to 0.4.3 [wulf 2005-08-13]