@@ -1,3 +1,4 @@
-@comment $NetBSD: PLIST,v 1.1.1.1 2002/04/19 15:16:04 zuntum Exp $
+@comment $NetBSD: PLIST,v 1.2 2005/08/14 07:42:12 wulf Exp $
+bin/cwmm
 bin/cwpcm
 bin/cwtext
