@@ -623,3 +623,4 @@ Changes to the packages collection and infrastructure in 2005:
 	Updated textproc/xmlto to 0.0.18nb1 [adrianp 2005-08-13]
 	Updated sysutils/mklivecd to 0.13.1 [xtraeme 2005-08-13]
 	Updated ham/grig to 0.4.3 [wulf 2005-08-13]
+	Updated ham/cwtext to 0.94 [wulf 2005-08-13]
